# regolith-configure

./: Cargo.toml  README.md  test_sort  test_sort.rs
src/: cli_args.rs  lib.rs  main.rs  output.rs  test_utils.rs  tests.rs
src/commands/: mod.rs  search.rs  set_resource.rs
src/config/: full.rs  mod.rs  partial.rs  xresources.rs
src/resources/: mod.rs  trawl.rs  xrdb.rs
src/search/: bindings.rs  keyword.rs  mod.rs  resource.rs
