[package]
name = "regolith-configure"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
colored = "2"
glob = "0.3.3"
zbus = { version = "5.12.0", default-features = false, features = ["async-io", "blocking", "blocking-api"] }
strsim = "0.11.1"

[dev-dependencies]
tempfile = "3"
